variables.RunFour.scala.error
Erreur de compilation :
RunFour:5: error: value nbBisc is not a member of Unit
possible cause: maybe a semicolon is missing before `value nbBisc'?
    } nbBisc=nbBisc+1
      ^